--- a/web_dev_udemy/app.css
+++ b/web_dev_udemy/app.css
@@ -1,41 +1,28 @@
+/* body {
+    margin: 0;
+} */
+
 h1 {
-    text-align: center;
-    /* text-decoration: cyan underline wavy; */
-    letter-spacing: 10px;
-    font-size: 30px;
-    background-color: beige;
-    width: 200px;
-    padding-left: 20px;
-    padding-top: 50px;
+    font-size: 40px;
+    /* background-color: azure; */
+    border: 1px solid black;
+    line-height: 200%;
+}
+
+span {
+    background-color: blanchedalmond;
+    border: 1px solid black;
+    /* display: block; */
+}
+
+section {
+    background-color: cadetblue;
+    width: 800px;
+    height: 800px;
 }
 
 div {
-    width: 400px;
-    background-color: beige;
-}
-
-button {
-    padding: 5px;
-}
-
-#one {
-    background-color: #15616d;
-    border-width: 5px;
-    border-color: #c1121f;
-    border-style: solid;
-    box-sizing: border-box;
-}
-#two {
-    background-color: #78290f;
-    border-width: 3px;
-    border-color: #ffecd1;
-    border-style: dashed;
-    box-sizing: border-box;
-    border-radius: 5%;
-}
-#three {
-    background-color: #ffecd1;
-    border: solid 4px #0a9396;
-    box-sizing: border-box;
-
+    background-color: cyan;
+    width: 50%;
+    height: 50%;
 }
