--- a/web_dev_udemy/rem/app.css
+++ b/web_dev_udemy/rem/app.css
@@ -9,6 +9,26 @@ h1 {
     line-height: 200%;
 }
 
+h2 {
+    font-size: 2em;
+}
+
+article {
+    font-size: 20px;
+}
+
+p {
+    font-size: 0.5em;
+}
+
+button {
+    font-size: 1em;
+    padding: 0 1em;
+    border-radius: 0.5em;
+    background-color: darkslategrey;
+    color: aliceblue;
+}
+
 span {
     background-color: blanchedalmond;
     border: 1px solid black;
