--- a/web_dev_udemy/starter/app.css
+++ b/web_dev_udemy/starter/app.css
@@ -1,4 +1,10 @@
-body {
+
+
+
+
+
+
+/* body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,4 +27,4 @@ button:hover {
     box-shadow: 0 0.5em 0.5em -0.4em  rgb(236, 234, 217);
     transform: translateY(-0.25em);
     cursor: pointer;
-}
+} */
